--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -960,7 +960,7 @@ This might usefully be compared with the table at the end of §\ref{s:directPart
 
 \practiceproblems
 
-{\HUGE These still need to be done \causeanerror}
+% {\HUGE These still need to be done \causeanerror}
 
 \problempart
 Show that each of the following is either a logical truth or a logical falsehood:
@@ -976,7 +976,7 @@ Show that each of the following is either a logical truth or a logical falsehood
 
 \solutions
 \problempart
-\label{pr.NotEquiv}
+\label{pr.Equiv}
 Show that the following pairs of sentences are logically equivalent.
 \begin{earg}
 \item $Ja$, $Ka$
