--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -110,7 +110,7 @@ To do this, we can specify that two-place predicates are true of \define{ordered
 		\ntuple{Heidegger, Sartre}\\
 		\ntuple{Sartre, Heidegger}
 	\end{center}
-Here the angle-brackets keep us informed concerning order – $\ntuple{a,b}$ is a different pair from $\ntuple{b,a}$ even though they correspond to the same collection of two things, a and b. Suppose I now add the following stipulations:
+Here the angle brackets keep us informed concerning order – $\ntuple{a,b}$ is a different pair from $\ntuple{b,a}$ even though they correspond to the same collection of two things, a and b. Suppose I now add the following stipulations:
 	\begin{ekey}
 		\item[l] Lenin
 		\item[m] Marx
